--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2024"
 keywords = ["embedded-hal"]
 
 [dependencies]
-embedded-hal="1.0"
-thiserror="2"
+embedded-hal = "1.0"
+thiserror = { version = "2", default-features = false }
