--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 keywords = ["embedded-hal"]
 
 [dependencies]
-embedded-hal = "1.0"
+embedded-hal = "1"
+embedded-hal-async = "1"
 thiserror = { version = "2", default-features = false }
